cluster/apps/default/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zed-homepage
  namespace: default
  labels:
    app.kubernetes.io/name: zed-homepage
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: zed-homepage
  replicas: 1
  template:
    metadata:
      name: zed-homepage
      namespace: default
      labels:
        app.kubernetes.io/name: zed-homepage
    spec:
      containers:
        - name: homepage
          # renovate: registryUrl=https://ghcr.io/zbigniewzolnierowicz/blog
          image: ghcr.io/zbigniewzolnierowicz/blog:1652901436
          resources:
            limits:
              memory: 256M
              cpu: 200m
