cluster/apps/default/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zed-homepage-service
  namespace: default
  labels:
    app.kubernetes.io/name: zed-homepage
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: zed-homepage
  type: ClusterIP
