cluster/apps/default/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zed-homepage
  namespace: default
  labels:
    app.kubernetes.io/name: plex
spec:
  ingressClassName: traefik
  rules:
    - host: notdead.cafe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zed-homepage
                port:
                  number: 80
  tls:
    - hosts:
        - notdead.cafe
      secretName: zed-homepage-tls
